Fix .button-vertical-padding not taking border width into account
This was causing buttons to be a little too tall.

--- a/components/button/config.less
+++ b/components/button/config.less
@@ -34,8 +34,8 @@
     transition: background-color @duration @button-transition-timing;
   }
 
-  .button-vertical-padding(@height, @font-size) {
-    @button-vertical-padding: (@height - @font-size) / 2;
+  .button-vertical-padding(@height, @font-size, @border-width: 1px) {
+    @button-vertical-padding: (@height - @font-size - @border-width * 2) / 2;
   }
 
   .button-color(@color, @background-color) {
